# server/docs/swagger.json
@@ -4,6 +4,109 @@
         "contact": {}
     },
     "paths": {
+        "/api/game": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Start a game.",
+                "parameters": [
+                    {
+                        "description": "request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/room.RequestStartGame"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/game.Game"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/game/{game_id}/concede": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Player concedes a game.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "room id",
+                        "name": "game_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/game.RequestConcedeGame"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/game.Game"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/player": {
             "post": {
                 "consumes": [
@@ -20,7 +123,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.RequestNewPlayer"
+                            "$ref": "#/definitions/player.RequestNewPlayer"
                         }
                     }
                 ],
@@ -28,7 +131,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Player"
+                            "$ref": "#/definitions/player.Player"
                         }
                     },
                     "400": {
@@ -59,7 +162,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Player"
+                            "$ref": "#/definitions/player.Player"
                         }
                     },
                     "404": {
@@ -93,7 +196,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.RequestNewRoom"
+                            "$ref": "#/definitions/room.RequestNewRoom"
                         }
                     }
                 ],
@@ -101,7 +204,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Room"
+                            "$ref": "#/definitions/room.Room"
                         }
                     },
                     "400": {
@@ -132,7 +235,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Room"
+                            "$ref": "#/definitions/room.Room"
                         }
                     },
                     "400": {
@@ -179,7 +282,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.RequestJoinRoom"
+                            "$ref": "#/definitions/room.RequestJoinRoom"
                         }
                     }
                 ],
@@ -187,7 +290,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Room"
+                            "$ref": "#/definitions/room.Room"
                         }
                     },
                     "400": {
@@ -234,7 +337,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.RequestLeaveRoom"
+                            "$ref": "#/definitions/room.RequestLeaveRoom"
                         }
                     }
                 ],
@@ -242,62 +345,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Room"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/api.errorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/api.errorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/api.errorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/room/{room_id}/start": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Start game in a room.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "room id",
-                        "name": "room_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "request body",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.RequestNewGame"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/entity.Room"
+                            "$ref": "#/definitions/room.Room"
                         }
                     },
                     "400": {
@@ -333,7 +381,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entity.Room"
+                                "$ref": "#/definitions/room.Room"
                             }
                         }
                     },
@@ -362,7 +410,60 @@
                 }
             }
         },
-        "entity.Player": {
+        "game.Game": {
+            "type": "object",
+            "properties": {
+                "active_player": {
+                    "type": "string"
+                },
+                "drawn_players": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "id": {
+                    "type": "string"
+                },
+                "losing_players": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "state": {
+                    "$ref": "#/definitions/game.gameState"
+                },
+                "winning_players": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "game.RequestConcedeGame": {
+            "type": "object",
+            "properties": {
+                "player_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "game.gameState": {
+            "type": "string",
+            "enum": [
+                "not_started",
+                "started",
+                "finished"
+            ],
+            "x-enum-varnames": [
+                "StateNotStarted",
+                "StateStarted",
+                "StateFinished"
+            ]
+        },
+        "player.Player": {
             "type": "object",
             "properties": {
                 "display_name": {
@@ -373,37 +474,7 @@
                 }
             }
         },
-        "entity.RequestJoinRoom": {
-            "type": "object",
-            "properties": {
-                "player_id": {
-                    "type": "string"
-                },
-                "room_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "entity.RequestLeaveRoom": {
-            "type": "object",
-            "properties": {
-                "player_id": {
-                    "type": "string"
-                },
-                "room_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "entity.RequestNewGame": {
-            "type": "object",
-            "properties": {
-                "player_time_ms": {
-                    "type": "integer"
-                }
-            }
-        },
-        "entity.RequestNewPlayer": {
+        "player.RequestNewPlayer": {
             "type": "object",
             "properties": {
                 "display_name": {
@@ -411,7 +482,23 @@
                 }
             }
         },
-        "entity.RequestNewRoom": {
+        "room.RequestJoinRoom": {
+            "type": "object",
+            "properties": {
+                "player_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "room.RequestLeaveRoom": {
+            "type": "object",
+            "properties": {
+                "player_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "room.RequestNewRoom": {
             "type": "object",
             "properties": {
                 "room_name": {
@@ -419,7 +506,18 @@
                 }
             }
         },
-        "entity.Room": {
+        "room.RequestStartGame": {
+            "type": "object",
+            "properties": {
+                "player_time_ms": {
+                    "type": "integer"
+                },
+                "room_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "room.Room": {
             "type": "object",
             "properties": {
                 "game_id": {
